# bitcoingadgets

./: README.md  encrypt.py  fastgen.py  filekey.key  getlucky.py  main.py  makeqr.py  pyproject.toml  requirements.txt  secure.py  test.py  walletdata.txt
data/: grants pi wallet.txt  main.txt
secrets/: wallet.key
