[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
bip-utils = "^2.3.0"
bip32utils = "^0.3.post4"
mnemonic = "^0.20"
cryptography = "^36.0.2"
pandas = "^1.4.1"
requests = "^2.27.1"
bit = "^0.8.0"
bs4 = "^0.0.1"
colorama = "^0.4.4"
pyminizip = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"